--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.51.23",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.4",
@@ -21,7 +22,9 @@
     "react-router-dom": "^6.26.1",
     "react-type-animation": "^3.2.0",
     "sweetalert2": "^11.12.4",
-    "zod": "^3.23.8"
+    "yup": "^1.4.0",
+    "zod": "^3.23.8",
+    "zod-formik-adapter": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
